--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tailwindcss -i ./src/public/css/input.css -o ./src/public/css/styles.css --watch",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "tailwindcss": "^3.2.7"
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "express": "^4.18.2",
